# ai-eng-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  streaming-backend.py  streaming-data-pipeline.py  streaming-frontend.html
langchain-multi-agent-patterns/: router.py  skills.py  state-machine.py  supervisor.py
realtime-audio/: package-lock.json  package.json
realtime-audio/public/: app.js  index.html
realtime-audio/src/: server.ts
