[project]
name = "aieng"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "datasketch==1.8.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain[openai]>=1.2.8",
    "pyprobables==0.6.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff]
exclude = []
line-length = 150
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
